compiler/test-data/parser/types/errors/asset_on_collection.frel
module types.errors.asset_on_collection

theme BadTheme {
    gradients : asset List<Color>
}
